class DataAssembly():
    def __init__(self):
        self.TagName='TagName'
        self.TagDescription='TagDescription'